--- a/js/flowers/index.html
+++ b/js/flowers/index.html
@@ -2,8 +2,8 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Moonlight</title>
-    <link rel="stylesheet" href="../stylesheet/style.css">
+    <title>Draw flowers</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
 
   <body>
@@ -16,11 +16,11 @@
   <!-- text overlay -->
   <div class="overlay clickable corner">
 
-  <div><a href="./fullscreen/mooon.js">Code</a> · <a href="./fullscreen/">Fullscreen</a></div>
+  <div><a href="./fullscreen/">Fullscreen</a></div>
 
-  <div>Guarda che luna guarda che mare</div>
+  <div>Flowers in the digital era be like:</div>
 
-  <div class="experiment-description"><p>Mado' che romantico</p>
+  <div class="experiment-description"><p>Do they whiter?</p>
   </div>
 
 </div>
