--- a/js/pencil/index.html
+++ b/js/pencil/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Pencil Spread</title>
-    <link rel="stylesheet" href="../stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <!--<script src="/js/libraries/prefixfree.min.js"></script>-->
     <!--<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">-->
   </head>
