--- a/js/moon/index.html
+++ b/js/moon/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Moonlight</title>
-    <link rel="stylesheet" href="../stylesheet/style.css">
+    <link rel="stylesheet" href="/stylesheet/style.css">
   </head>
 
   <body>
@@ -20,7 +20,7 @@
 
   <div>Guarda che luna guarda che mare</div>
 
-  <div class="experiment-description"><p>Mado' che romantico</p>
+  <div class="experiment-description"><p>So romantic</p>
   </div>
 
 </div>
