--- a/chat/index.html
+++ b/chat/index.html
@@ -7,7 +7,17 @@
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
+
         function getMessages() {
+          $.get("http://pompala.altervista.org/chat/chat.txt", setText);
+          var t = setTimeout(getMessages, 500);
+        }
+        function setText(data,status) {
+            var result = data.replace(/pizello/g, " <br> ");
+            document.getElementById('chat').innerHTML = result
+        }
+        
+        function getMessages_old() {
             var url = 'http://pompala.altervista.org/chat/chat.txt';
             var storedText;
 
