fixed javascript bugs

--- a/js/pencil/index.html
+++ b/js/pencil/index.html
@@ -18,7 +18,7 @@
   <!-- text overlay -->
   <div class="overlay clickable corner">
 
-  <div><a href="./fullscreen/sketch_pencil.js">Code</a> · <a href="./fullscreen/">Fullscreen</a></div>
+  <div><a href="./fullscreen/pencil.js">Code</a> · <a href="./fullscreen/">Fullscreen</a></div>
 
   <div>“You know the thing about chaos?”</div>
 
