php won't work on GitHub :(

--- a/chat/index.html
+++ b/chat/index.html
@@ -9,30 +9,12 @@
     <script>
 
         function getMessages() {
-          $.get("http://pompala.altervista.org/chat/chat.txt", setText);
+          $.get("chat.txt", setText);
           var t = setTimeout(getMessages, 500);
         }
         function setText(data,status) {
             var result = data.replace(/pizello/g, " <br> ");
             document.getElementById('chat').innerHTML = result
-        }
-        
-        function getMessages_old() {
-            var url = 'http://pompala.altervista.org/chat/chat.txt';
-            var storedText;
-
-            fetch(url)
-            .then(function(response) {
-                response.text().then(function(text) {
-                storedText = text;
-                done();
-                });
-            });
-
-            function done() {
-                var result = storedText.replace(/pizello/g, " <br> ");
-                document.getElementById('chat').innerHTML = result
-            }
         }
     </script>
 </head>
