--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="overlay">I don't like easily readable writings.</div>
   <div class="overlay">I don't like easily navigable websites.</div>
   <div class="overlay">...but I like brownian motion and chill people</div>
-  <div class="overlayWHITE">and you can visit /chat</div>
+  <div class="overlayWHITE">and you can visit /about_me</div>
 
 </div>
 
