best about me page ever

--- a/about_me/index.html
+++ b/about_me/index.html
@@ -4,13 +4,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>About me</title>
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
   </head>
 
   <body>
       <div class="splash cover">
 
   <!-- js sketch background -->
-  <iframe id="sketch-container" src="js/moon/fullscreen/"></iframe>
+  <iframe id="sketch-container" src="../js/moon/fullscreen/"></iframe>
 
   
   <!-- text overlay -->
