--- a/about_me/index.html
+++ b/about_me/index.html
@@ -7,15 +7,51 @@
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
   </head>
 
-  <body>
-      <div class="splash cover">
+<body>
+  <div class="Nav bar">
+    <!-- my links -->
+  	<div class="social"><li></li></div>
+    <div class="subnav">
+    	<a href="https://github.com/IlMioFrizzantinoAmabile"> 
+        <img src="logos/github.png" style="width:42px;height:42px;"> </a>
+    </div>
+    <div class="subnav">
+    	<a href="https://scholar.google.com/citations?user=tYLBBmEAAAAJ"> 
+        <img src="logos/scholar.png" style="width:42px;height:42px;"> </a>
+    </div>
+    <div class="subnav">
+    	<a href="https://www.kaggle.com/marcomio"> 
+        <img src="logos/kaggle.png" style="width:42px;height:42px;"> </a>
+    </div>
+    <div class="subnav">
+    	<a href="https://www.linkedin.com/in/marco-miani/"> 
+        <img src="logos/linkedin.png" style="width:42px;height:42px;"> </a>
+    </div>
+    <div class="subnav">
+    	<a href="https://twitter.com/marco_miani"> 
+        <img src="logos/twitter.png" style="width:42px;height:42px;"> </a>
+    </div>
+    <div class="subnav">
+    	<a href="https://www.youtube.com/c/MarcoMiani_official"> 
+        <img src="logos/youtube.png" style="width:42px;height:42px;"> </a>
+    </div>
+    <div class="subnav">
+    	<a href="https://www.duckduckgo.com"> 
+        <img src="logos/dolphin.jpeg" style="width:42px;height:42px;"> </a>
+    </div>
+  </div>
 
-  <!-- js sketch background -->
-  <iframe id="sketch-container" src="../js/moon/fullscreen/"></iframe>
 
-  
-  <!-- text overlay -->
-  <div class="big overlay">I am Marco</div>
-  <div class="overlay">and I will fill this page one day (probably)</div>
+  <div class="splash cover">
 
-</div>
+    <!-- js sketch background -->
+    <iframe id="sketch-container" src="../js/moon/fullscreen/"></iframe>
+
+    <!-- text overlay -->
+    <div class="big overlay">I am Marco</div>
+    <div class="overlay">and I will fill this page one day (probably)</div>
+
+  </div>
+</body>
+
+<!-- dude why are you even reading this? -->
