something actually useful

--- a/about_me/index.html
+++ b/about_me/index.html
@@ -24,10 +24,6 @@
         <img src="logos/kaggle.png" style="width:42px;height:42px;"> </a>
     </div>
     <div class="subnav">
-    	<a href="https://www.linkedin.com/in/marco-miani/"> 
-        <img src="logos/linkedin.png" style="width:42px;height:42px;"> </a>
-    </div>
-    <div class="subnav">
     	<a href="https://twitter.com/marco_miani"> 
         <img src="logos/twitter.png" style="width:42px;height:42px;"> </a>
     </div>
@@ -36,7 +32,11 @@
         <img src="logos/youtube.png" style="width:42px;height:42px;"> </a>
     </div>
     <div class="subnav">
-    	<a href="https://www.duckduckgo.com"> 
+    	<a href="https://www.linkedin.com/in/marco-miani/"> 
+        <img src="logos/linkedin.png" style="width:42px;height:42px;"> </a>
+    </div>
+    <div class="subnav">
+    	<a href="https://github.com/IlMioFrizzantinoAmabile/IlMioFrizzantinoAmabile.github.io/raw/main/app/deh.apk"> 
         <img src="logos/dolphin.jpeg" style="width:42px;height:42px;"> </a>
     </div>
   </div>
@@ -49,7 +49,8 @@
 
     <!-- text overlay -->
     <div class="big overlay">I am Marco</div>
-    <div class="overlay">and I will fill this page one day (probably)</div>
+    <div class="overlay">and I will complete this page before these lines fill this circle</div>
+    <div class="overlayWHITE">(probably)</div>
 
   </div>
 </body>
