add spam to nnj

--- a/about_me/index.html
+++ b/about_me/index.html
@@ -35,7 +35,9 @@
             <div class="content">
                 <header>
                     <h1>Hi.<br> I am <i>Marco</i>.</h1>
-                    <h2>I like spartans layouts. <br> I don't like easily readable writings. <br> I don't like easily navigable websites.</h2>
+                    <h2>Check out the <a href="https://ilmiofrizzantinoamabile.github.io/nnj/">nnj</a> repo <br> 
+                    <img src="imgs/Bender.png" alt="Me deciding to create nnj">
+                    </h2>
                 </header>
             </div>
         </section>
